tests/ui/unexpected_colon.stderr
error: no rules expected the token `:`
 --> $DIR/unexpected_colon.rs:5:13
  |
5 |     json!({ : true });
  |             ^ no rules expected this token in macro call

error: aborting due to previous error

